<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kaganga.ocr.MainActivity">
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:icon="@drawable/ic_photo_camera"
        android:title="@string/action_pick_image_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_galery"
        android:orderInCategory="100"
        android:icon="@drawable/ic_image"
        android:title="@string/action_pick_image_galery"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_tips"
        android:orderInCategory="100"
        android:title="@string/action_tips"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
