<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:icon="@drawable/ic_photo_camera"
        android:title="@string/action_pick_image_camera"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_galery"
        android:orderInCategory="100"
        android:icon="@drawable/ic_image"
        android:title="@string/action_pick_image_galery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:icon="@drawable/ic_home"
        android:title="@string/action_home"
        app:showAsAction="never" />

</menu>