<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Petunjuk">



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:textSize="24dp"
            android:text="@string/petunjuk"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="1. "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="@string/petunjuk1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="2. "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="@string/petunjuk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="3. "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="@string/petunjuk3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="4. "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="@string/petunjuk4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>